repology-updater/tests/snapshots/ruleset__parse_ruleset_hier.snap
---
source: repology-updater/tests/ruleset.rs
expression: res.unwrap()
---
Ruleset {
    rules: [
        Rule {
            name: [
                "foo1",
            ],
            namepat: None,
            ver: [],
            notver: [],
            verpat: None,
            wwwpart: [],
            sourceforge: [],
            summpart: [],
            wwwpat: None,
            ruleset: [],
            noruleset: [],
            category: [],
            categorypat: None,
            maintainer: [],
            vercomps: None,
            verlonger: None,
            vergt: None,
            verge: None,
            verlt: None,
            verle: None,
            vereq: None,
            verne: None,
            relgt: None,
            relge: None,
            rellt: None,
            relle: None,
            releq: None,
            relne: None,
            flag: [],
            noflag: [],
            is_p_is_patch: None,
            hasbranch: None,
            setname: Some(
                "foo1",
            ),
            setver: None,
            addflavor: None,
            setflavor: None,
            resetflavors: None,
            setbranch: None,
            setbranchcomps: None,
            remove: None,
            ignore: None,
            devel: None,
            weak_devel: None,
            altver: None,
            altscheme: None,
            vulnerable: None,
            p_is_patch: None,
            any_is_patch: None,
            sink: None,
            outdated: None,
            legacy: None,
            nolegacy: None,
            incorrect: None,
            untrusted: None,
            noscheme: None,
            rolling: None,
            snapshot: None,
            successor: None,
            debianism: None,
            generated: None,
            trace: None,
            addflag: [],
            last: None,
            tolowername: None,
            replaceinname: None,
            warning: None,
            setsubrepo: None,
            maintenance: None,
            disposable: None,
            precious: None,
        },
        Rule {
            name: [
                "foo2.1",
            ],
            namepat: None,
            ver: [],
            notver: [],
            verpat: None,
            wwwpart: [],
            sourceforge: [],
            summpart: [],
            wwwpat: None,
            ruleset: [],
            noruleset: [],
            category: [],
            categorypat: None,
            maintainer: [],
            vercomps: None,
            verlonger: None,
            vergt: None,
            verge: None,
            verlt: None,
            verle: None,
            vereq: None,
            verne: None,
            relgt: None,
            relge: None,
            rellt: None,
            relle: None,
            releq: None,
            relne: None,
            flag: [],
            noflag: [],
            is_p_is_patch: None,
            hasbranch: None,
            setname: Some(
                "foo2.1",
            ),
            setver: None,
            addflavor: None,
            setflavor: None,
            resetflavors: None,
            setbranch: None,
            setbranchcomps: None,
            remove: None,
            ignore: None,
            devel: None,
            weak_devel: None,
            altver: None,
            altscheme: None,
            vulnerable: None,
            p_is_patch: None,
            any_is_patch: None,
            sink: None,
            outdated: None,
            legacy: None,
            nolegacy: None,
            incorrect: None,
            untrusted: None,
            noscheme: None,
            rolling: None,
            snapshot: None,
            successor: None,
            debianism: None,
            generated: None,
            trace: None,
            addflag: [],
            last: None,
            tolowername: None,
            replaceinname: None,
            warning: None,
            setsubrepo: None,
            maintenance: None,
            disposable: None,
            precious: None,
        },
        Rule {
            name: [
                "foo2.2",
            ],
            namepat: None,
            ver: [],
            notver: [],
            verpat: None,
            wwwpart: [],
            sourceforge: [],
            summpart: [],
            wwwpat: None,
            ruleset: [],
            noruleset: [],
            category: [],
            categorypat: None,
            maintainer: [],
            vercomps: None,
            verlonger: None,
            vergt: None,
            verge: None,
            verlt: None,
            verle: None,
            vereq: None,
            verne: None,
            relgt: None,
            relge: None,
            rellt: None,
            relle: None,
            releq: None,
            relne: None,
            flag: [],
            noflag: [],
            is_p_is_patch: None,
            hasbranch: None,
            setname: Some(
                "foo2.2",
            ),
            setver: None,
            addflavor: None,
            setflavor: None,
            resetflavors: None,
            setbranch: None,
            setbranchcomps: None,
            remove: None,
            ignore: None,
            devel: None,
            weak_devel: None,
            altver: None,
            altscheme: None,
            vulnerable: None,
            p_is_patch: None,
            any_is_patch: None,
            sink: None,
            outdated: None,
            legacy: None,
            nolegacy: None,
            incorrect: None,
            untrusted: None,
            noscheme: None,
            rolling: None,
            snapshot: None,
            successor: None,
            debianism: None,
            generated: None,
            trace: None,
            addflag: [],
            last: None,
            tolowername: None,
            replaceinname: None,
            warning: None,
            setsubrepo: None,
            maintenance: None,
            disposable: None,
            precious: None,
        },
        Rule {
            name: [
                "foo3",
            ],
            namepat: None,
            ver: [],
            notver: [],
            verpat: None,
            wwwpart: [],
            sourceforge: [],
            summpart: [],
            wwwpat: None,
            ruleset: [],
            noruleset: [],
            category: [],
            categorypat: None,
            maintainer: [],
            vercomps: None,
            verlonger: None,
            vergt: None,
            verge: None,
            verlt: None,
            verle: None,
            vereq: None,
            verne: None,
            relgt: None,
            relge: None,
            rellt: None,
            relle: None,
            releq: None,
            relne: None,
            flag: [],
            noflag: [],
            is_p_is_patch: None,
            hasbranch: None,
            setname: Some(
                "foo3",
            ),
            setver: None,
            addflavor: None,
            setflavor: None,
            resetflavors: None,
            setbranch: None,
            setbranchcomps: None,
            remove: None,
            ignore: None,
            devel: None,
            weak_devel: None,
            altver: None,
            altscheme: None,
            vulnerable: None,
            p_is_patch: None,
            any_is_patch: None,
            sink: None,
            outdated: None,
            legacy: None,
            nolegacy: None,
            incorrect: None,
            untrusted: None,
            noscheme: None,
            rolling: None,
            snapshot: None,
            successor: None,
            debianism: None,
            generated: None,
            trace: None,
            addflag: [],
            last: None,
            tolowername: None,
            replaceinname: None,
            warning: None,
            setsubrepo: None,
            maintenance: None,
            disposable: None,
            precious: None,
        },
    ],
}
